src/objects/X3_0_Masindi_Sunflower__c.object
<CustomObject>
    <fields>
        <fullName>A_Kg_of_Sunflower_at_retail_price__c</fullName>
        <label>A Kg of Sunflower at retail price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Kg_of_Sunflower_at_wholesale_price__c</fullName>
        <label>A Kg of Sunflower at wholesale price</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_trader_in_Sunflower__c</fullName>
        <label>Name of trader in Sunflower</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_0_Market_Masindi__c</fullName>
        <label>3.0 Market Masindi</label>
        <referenceTo>Market_Masindi__c</referenceTo>
        <relationshipLabel>3.0 Masindi Sunflower</relationshipLabel>
        <relationshipName>X3_0_Masindi_Sunflower</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Masindi Sunflower</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>3.0 Masindi Sunflower Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Masindi Sunflower</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>